# data-api-collector-python

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  api-key.json.example  direct_neo4j_test.py  docker-compose.yml  docker-entrypoint.sh  example.ipynb  pyproject.toml  repomix-output.txt  repomix-output.xml  requirements.in  requirements.txt  start.sh  startup.sh  stop.sh
app/: main.py
app/api/endpoints/: __init__.py  custom_generators.py  data_sources.py  kafka.py  kafka_custom_generators.py  kafka_generators.py  llms.py  multimodal_ocr.py  neo4j.py  ollama_test.py  redis.py  service_ocr.py  sled.py
app/core/: config.py  database.py  neo_database.py
app/models/: events.py
app/schemas/: events.py
app/utils/: device_utils.py
app/utils/hugging_face/: hf_utils.py
app/utils/ollama/: ollama_config.py  ollama_functions.py
app/utils/pddl/: cli.py  main.py  pddl_classes.py  pddl_client.py  repomix-output.xml  task_builder.py  task_execution_manager.py  task_repository.py  test_demo.py  workflow_builder.py
app/utils/pydantic_models/: graph.py  project_details.py  requirements.py
deploy/: README.md
deploy/aws/: main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
docs/: kafka-data-generation.md  neo4j-graph-generation.md  postgres-data-generation.md  security-hardening.md  testing-and-databricks-integration.md
elastic_data/: nodes
elastic_data/_state/: _x.cfe  _x.cfs  _x.si  node-6.st  segments_1p
elastic_data/snapshot_cache/: segments_7
examples/: _config.ipynb  custom_kafka.ipynb  custom_neo4j_postgres.ipynb  kafka_streaming.ipynb  neo4j_graph.ipynb  postgres_jdbc.ipynb  quickstart.ipynb
kafka_data/: meta.properties
kafka_data/__consumer_offsets-21/: partition.metadata
migrations/: env.py
migrations/versions/: cfcfebbb11ac_create_kafka_event_logs_table.py
scripts/: setup-env.sh
services/ocr_service/: Dockerfile  pyproject.toml  repomix-output.xml
services/ocr_service/ocr_service/: main.py
services/ocr_service/ocr_service/utils/: model_util.py  model_util_gguf.py
services/spark_generator/: Dockerfile  pyproject.toml
services/spark_generator/spark_generator/: main.py
tests/: test_services.sh
