[project]
name = "data-api-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "confluent-kafka>=2.11.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langgraph>=0.6.7",
    "neo4j>=5.28.2",
    "numpy>=2.3.3",
    "openai>=1.107.0",
    "polars>=1.33.1",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyspark>=4.0.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
]
